[tool.poetry]
name = "gdinfo"
version = "1.0"
description = "An API for getting Geometry Dash information in Python"
authors = ["MrRare <mrrare.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["setuptools", "requests"]
build-backend = "setuptools.build_meta"

[tool.poetry.metadata]
license = "GNU GPLv3"
